--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 id="header-title">Daily Expenses</h1>
+                    <h1 id="header-title">Daily <span style="display: none;">Expenses</span></h1>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items...">
@@ -29,6 +29,8 @@
             <h2 class="title">Add a expense</h2>
             <form id="addForm" class="form-inline mb-3">
                 <input type="text" class="form-control mr-2" id="item">
+                <input type="radio" name="withTax" id="withTax" value="GST">
+                <label for="withTax">GST</label>
                 <input type="submit" class="btn btn-dark" value="Submit">
             </form>
             <h2 class="title">Today Expense</h2>
