Moved all methods to intro files

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button>
                 </li>
             </ul>
+            <button id="expense-button" class="btn btn-dark">Add Expense</button>
+
+            <div id="box"></div>
         </div>
     </div>
 </body>
