--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 id="header-title">Daily <span style="display: none;">Expenses</span></h1>
+                    <h1 id="header-title">Daily Expenses</span></h1>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items...">
@@ -29,23 +29,12 @@
             <h2 class="title">Add a expense</h2>
             <form id="addForm" class="form-inline mb-3">
                 <input type="text" class="form-control mr-2" id="item">
-                <input type="radio" name="withTax" id="withTax" value="GST">
                 <input type="submit" class="btn btn-dark" value="Submit">
             </form>
             <h2 class="title">Today Expense</h2>
             <ul id="items" class="list-group">
-                <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                </li>
-                <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                </li>
-                <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                </li>
-                <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                </li>
-            </ul>
-            <button id="expense-button" class="btn btn-dark">Add Expense</button>
 
-            <div id="box"></div>
+            </ul>
         </div>
     </div>
 </body>
