--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 id="header-title">Daily Expenses</span></h1>
+                    <h1 id="header-title">Monthly Expenses</span></h1>
                 </div>
                 <div class="col-md-6 align-self-center">
                     <input type="text" class="form-control" id="filter" placeholder="Search Items...">
@@ -27,11 +27,10 @@
     <div class="container">
         <div id="main" class="card card-body">
             <h2 class="title">Add a expense</h2>
-            <form id="addForm" class="form-inline mb-3">
-                <input type="text" class="form-control mr-2" id="item">
-                <input type="submit" class="btn btn-dark" value="Submit">
+            <form id="addForm" class="form mb-3">
+                <input type="text" class="form-control mr-2 mb-3" id="item">
+                <input type="submit" class="btn btn-dark" value="Add">
             </form>
-            <h2 class="title">Today Expense</h2>
             <ul id="items" class="list-group">
 
             </ul>
